tests/baselines/reference/errorForBareSpecifierWithImplicitModuleResolutionNone.errors.txt
errorForBareSpecifierWithImplicitModuleResolutionNone.ts(3,23): error TS2307: Cannot find module 'non-existent-module' or its corresponding type declarations.


==== errorForBareSpecifierWithImplicitModuleResolutionNone.ts (1 errors) ====
    // This would be classed as moduleResolutionKind: Classic
    
    import { thing } from "non-existent-module";
                          ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'non-existent-module' or its corresponding type declarations.
    thing()
    